# tlph

./: .gitignore
00/: index.md
01/: Exercises.hs  TicTacToe.hs  index.md
02/: Kinds.hs  TypeLevelFunctions.hs  index.md
03/: Functors.hs  index.md
04/: TypeApplications.hs  Working.hs  index.md
05/: Gadt.hs  HList.hs  index.md
06/: Cont.hs  index.md
07/: Existential.hs  Scoping.hs  index.md
08/: Coercions.hs  index.md
09/: Schema.hs  index.md
10/: FirstClass.hs  index.md
11/: index.md
11/extensible/: LICENSE  README.md  extensible.cabal
11/extensible/src/: OpenProduct.hs  OpenSum.hs
